# rust-gpu-test

./: .gitignore  Cargo.toml  build.rs
rust-gpu-test/: Cargo.toml  build.rs
rust-gpu-test/src/: app.rs  gpu.rs  params.rs
shader/: Cargo.toml
shader/src/: lib.rs
shaders/src/: lib.rs  shared.rs
src/: app.rs  gpu.rs  lib.rs  main.rs
