[package]
name = "rust-gpu-test"
version = "0.1.0"
edition = "2024"
default-run = "rust-gpu-test"

[dependencies]
wgpu = { version = "29.0.3", features = ["spirv"] }
pollster = "0.4.0"
bytemuck = "1.25.0"
winit = "0.30.13"

[build-dependencies]
spirv-builder = { version = "0.10.0-alpha.1", default-features = false, features = ["use-compiled-tools"] }

# Compile build-dependencies in release-ish mode so rustc_codegen_spirv isn't dog slow.
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
codegen-units = 16
