[package]
name = "rust-gpu-test"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# shader crate
shaders = { path = "../shaders" }

# API
wgpu.workspace = true
pollster.workspace = true

# other
winit.workspace = true
bytemuck.workspace = true
anyhow.workspace = true

[build-dependencies]
# rust-gpu
cargo-gpu-install.workspace = true
anyhow.workspace = true
